# OcctImgui

./: .cursorrules  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.cursor/rules/: agent-general.mdc  log-rule.mdc
src/: Application.cpp  Application.h  GlfwOcctView.cpp  GlfwOcctView.h  GlfwOcctWindow.cpp  GlfwOcctWindow.h  ModelControlGui.cpp  ModelControlGui.h  ModelTreeGui.cpp  ModelTreeGui.h  main.cpp
src/ais/: Mesh_DataSource.cpp  Mesh_DataSource.h  OCCMesh_DataSource.cpp  OCCMesh_DataSource.h
src/events/: ModelEvents.h
src/examples/: ModelUsageExample.cpp  UnifiedModelExample.cpp  ViewUsageExample.cpp
src/gui/: IGUIComponent.h  ModelControlGui.cpp  ModelControlGui.h  ModelTreeGui.cpp  ModelTreeGui.h
src/importers/: IShapeImporter.h  MeshImporter.cpp  MeshImporter.h  StepImporter.cpp  StepImporter.h
src/model/: CadModel.cpp  CadModel.h  IModel.cpp  IModel.h  ModelFactory.cpp  ModelFactory.h  ModelImporter.cpp  ModelImporter.h  ModelManager.cpp  ModelManager.h  PolyModel.cpp  PolyModel.h  UnifiedModel.cpp  UnifiedModel.h
src/mvvm/: Command.h  GlobalSettings.h  MessageBus.h  Observable.h  Property.h  Signal.h
src/utils/: Logger.cpp  Logger.h
src/view/: IView.h  ImGuiView.cpp  ImGuiView.h  OcctView.cpp  OcctView.h  ViewManager.h
src/viewmodel/: CadViewModel.cpp  CadViewModel.h  Commands.h  IViewModel.h  PolyViewModel.cpp  PolyViewModel.h  UnifiedViewModel.cpp  UnifiedViewModel.h  ViewModelManager.cpp  ViewModelManager.h
tests/: mesh_datasource_test.cpp  model_importer_test.cpp  model_manager_test.cpp  model_test.cpp  unified_model_test.cpp
